# tinker

./: README.md
calc/: CMakeLists.txt  ast.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  string.hpp  symbol.hpp  token.hpp
init/: CMakeLists.txt  ast.cpp  ast.hpp  decl.cpp  decl.hpp  expr.cpp  expr.hpp  lexer.cpp  main.cpp  prelude.cpp  prelude.hpp  string.hpp  token.cpp  type.cpp  type.hpp  value.hpp
logo/: CMakeLists.txt  ast.cpp  ast.hpp  cast.cpp  cast.hpp  equivalent.cpp  equivalent.hpp  hash.cpp  hash.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  simplify.cpp  simplify.hpp  stream.hpp  string.cpp  string.hpp  symbol.cpp  symbol.hpp  token.hpp
logo/test/: absorb-and-1.in  absorb-and-2.in  absorb-and-3.in  absorb-and-4.in  absorb-or-1.in  absorb-or-2.in  big.in  contract-and-1.in  id-and.in  paren.in
